--- a/mom.html
+++ b/mom.html
@@ -10,10 +10,11 @@
 	<script defer src="./todoApp.js"></script>
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
-			createTodoApp(document.getElementById('todo-app'), 'Мои дела');
+			createTodoApp(document.getElementById('todo-app'), 'Дела Мамы');
 		});
 	</script>
-</head> 
+</head>
+
 <body>
 	<div class="container mb5">
 		<nav class="nav">
